welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: not found: value fini
while (!fini){
        ^ColumnByColumn:4: error: not found: value endLine
  while(!endLine){
         ^ColumnByColumn:9: error: not found: value tpc
  tpc(i)
  ^ColumnByColumn:10: error: not found: value getLargeurMonde
  if (i <= getLargeurMonde()){i=i+1}
           ^